--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ margin-left: 100px;
     
 }
 .title{
-    font-size:40px;
+    font-size:5vw;
     line-height:100px; 
     font-weight: bold;
     height:100px;
@@ -99,6 +99,7 @@ nav ul li a{
 }
 .about-left-col img{
     width: 100%;
+    height: auto;
 }
 .about-right-col
 { flex-basis:55%;
@@ -106,6 +107,7 @@ nav ul li a{
 }
 .about-text
 {
+font-size:2vw;
 max-width: 500px;
 margin-right: 150px;
 display: inline-block;
@@ -178,9 +180,10 @@ h1{
                     
 
             .img-box h3{
-                color:white;
-                position: absolute;
-                bottom: 0;
+                color:black;
+                position: relative;
+                bottom: 15px;
+                text-align: left;
                 left: 30px;
                 opacity: 0;
                 transition: bottom 0.5s,opacity 0.5s;
@@ -291,20 +294,6 @@ h1{
     box-shadow: 0 10px 20px 3px #00968814;
     cursor:pointer;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
